Use right unicode for left arrow and fix spacing of controls.

--- a/css/style.css
+++ b/css/style.css
@@ -114,9 +114,9 @@ canvas {
 }
 
 .left {
-	margin-right: 20px;
+	margin-right: 30px;
 }
 
 .right {
-	margin-left: 20px;
+	margin-left: 30px;
 }
